[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-cost-tracker"
version = "0.1.0"
description = "Track token usage and cost across OpenAI, Anthropic, and other LLM providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Muhammad Rashid", email = "muhammadrashid4587@gmail.com" },
]
keywords = ["llm", "openai", "anthropic", "cost", "tokens", "tracking", "budget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/muhammadrashid4587/llm-cost-tracker"
Repository = "https://github.com/muhammadrashid4587/llm-cost-tracker"
Issues = "https://github.com/muhammadrashid4587/llm-cost-tracker/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["llm_cost_tracker"]
